demo/app/grid/grid-demo.scss
$deep: '/deep/';

:host {
	display: flex;
	overflow: hidden;
	flex-direction: column;

	.demo-card {
		#{$deep} {
			deja-grid {
				min-height: 8rem;
				max-height: 600px;
				.listitem {
					.color {
						border-radius: 50%;
						width: 1.5rem;
						height: 1.5rem;
						margin: 0.35rem;
					}
					.loading {
						margin: 0.35rem;
					}
				}
			}
		}
		.listContainer {
			display: flex;
			flex-direction: column;
			overflow: hidden;

			#{$deep} {
				deja-grid {
					flex: 1 1 auto;
					margin: 1rem 0;
					.listitem {
						&.odd {
							deja-grid-row {
								background-color: rgba(#000, 0.07);
							}
						}
					}
				}
			}
		}
		#{$deep}#news {
			.cell-wrapper {
				&[colname="urlToImage"] {
					.logo {
						max-width: 100%;
						max-height: 100%;
						width: auto;
						height: auto;
						object-fit: contain;
					}
				}
				&[colname="description"] {
					.cell {
						white-space: normal;
					}
				}
			}
		}
	}
}

